--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
+    <title>SignIn</title>
 </head>
 <body>
-    
+    <div class="box">
+        <h1>Login</h1>
+        <form>
+            <div class="txt-field">
+                <span class="icon"><i class="fa fa-user-o"></i></span>
+                <input type="text" required placeholder="Username or Email">
+            </div>
+            <div class="txt-field">
+                <span class="icon"><i class="fa fa-lock"></i></span>
+                <input type="password" required placeholder="Enter your password">
+            </div>
+            <div class="click-form">
+                <div class="rememberMe">
+                    <input type="checkbox">
+                    <label>Remember Me</label>
+                </div>
+                <div class="ForgotPass">
+                    <a href="#">Forgot Password?</a>
+                </div>
+            </div>
+            <input type="submit" value="Login">
+            <p>Don't have an account? <a href="#">Sign up</a></p>
+            <h4>or connect with</h4>
+        </form>
+    </div>
+<script src="./app.js"></script>    
 </body>
 </html>
